Correccion de Transactionals y variables